IMPALA-2986: fix aggregation spilling stopping too early

An accounting bug in the aggregation node meant that it would give up
on spilling before trying to spill all partitions.  The hash table
buckets come from the buffer block manager, and so should be included
in the amount of memory that would be reclaimed if a partition is
spilled.

TPC-H Q18 in test_mem_usage_scaling was already exercises this path
but we didn't notice it. The new DCHECK will ensure it doesn't go
unnoticed.

Change-Id: Ib41d5d530d32c819784e4527e19772480b11e194
Reviewed-on: http://gerrit.cloudera.org:8080/2187
Reviewed-by: Dan Hecht <dhecht@cloudera.com>
Tested-by: Internal Jenkins